--- a/.env.template
+++ b/.env.template
@@ -1,4 +1,4 @@
-discord_webhook_url=https://discord.com/api/webhooks/
-discord_avatar_url=https://upload-os-bbs.hoyolab.com/upload/2022/11/24/21d71c44827fa664a6a21977d9a3dd1c_6799685155050732642.png
-discord_avatar_name=知恵の殿堂
-discord_embed_color=95af71
+discord_webhook_url="https://discord.com/api/webhooks/"
+discord_avatar_url="https://upload-os-bbs.hoyolab.com/upload/2022/11/24/21d71c44827fa664a6a21977d9a3dd1c_6799685155050732642.png"
+discord_avatar_name="知恵の殿堂"
+discord_embed_color="95af71"
